# warp-diagnose

./: .gitignore  Cargo.toml  PRODUCT_DESIGN.md  TASK_LOG.md  TECHNICAL_SOLUTION.md  WFUSION_EXECUTION_PLAN.md  build.rs
case/: README.md  run_case.sh
case/openclaw/data/out_dat/: wp-log.arrow  wp-log.json
case/openclaw/models/oml/: model.oml
case/openclaw/models/rules/: TASK_LOG.md
case/openclaw/models/schemas/: wparse_semantic.wfs
case/openclaw/models/wpl/: parse.wpl
case/scripts/: PRODUCT_DESIGN.md  TECHNICAL_SOLUTION.md  run_wp_wf_case.sh
case/simple/models/oml/: example.oml
case/wfusion/: ISSUE_INTERMEDIATE_SCORE_AGGREGATION.md  README.md  UPSTREAM_DEFECT_CLOSE_AGGREGATION.md  wfusion.toml
case/wfusion/alerts/: wf-semantic.arrow  wf-semantic.jsonl
case/wfusion/rules/: TASK_LOG.md  TECHNICAL_SOLUTION.md  wparse_semantic.wfl
case/wfusion/schemas/: wparse_semantic.wfs
case/wfusion/scripts/: build_wparse_events.py
case/wp-tools/: README.md  wfusion.toml
case/wp-tools/.run/: authority.sqlite
case/wp-tools/conf/: wfusion.toml  wparse.toml
case/wparse/: README.md  wfusion.toml
case/wparse/alerts/: semantic_alerts.jsonl
case/wparse/data/: demo.json  wparse_events.ndjson
case/wparse/schemas/: wparse_semantic.wfs
case/wparse/scripts/: build_wparse_events.py  run_file_case.sh
config/: warp-diagnose.toml
docs/: CONFIGURATION.md  UI_VIEW_ARCHITECTURE_REVIEW.md
src/: arrow_frame.rs  config.rs  data.rs  lib.rs  macos_icon.rs  main.rs
ui/: app_shell.slint  appwindow.slint  base_components.slint  pages.slint
view/: demo_log_dashboard.py
(+45 files in other folders)
