[package]
name = "warp-diagnose"
version = "0.1.0"
edition = "2024"
build = "build.rs"
default-run = "warp-diagnose"

[dependencies]
slint = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
arrow = { version = "54", default-features = false, features = ["ipc"] }
wp-arrow = { path = "../wp-arrow" }

[build-dependencies]
slint-build = "1"

[dev-dependencies]
oml = { package = "wp-oml", path = "../wp-motor/crates/wp-oml" }
